tests/valid/if/v08_inline_if.f
program inlineif
  integer x
  x = 5
  if (x .GT. 0) print *, 'positivo'
  print *, x
end
