tests/invalid/if/i10_uninit_if_cond.f
program uninitif
  integer x
  if (x .GT. 0) then
    print *, 'positivo'
  endif
end
